--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
       
       // Fallback to MEE6 API
       try {
-        const response = await fetch(`https://mee6.xyz/api/guilds/${GUILD_ID}/`);
+        const response = await fetch(`https://mee6.xyz/api/guilds/${1418230363754598563}/`);
         const data = await response.json();
         const memberCount = data.guild?. member_count || 0;
         const dcElement = document.getElementById('dcCount');
@@ -428,7 +428,7 @@
 
     // ===== MINECRAFT PLAYERS (mcsrvstat. us API) =====
     try {
-      const response = await fetch('https://api.mcsrvstat.us/2/cazemc. xyz');
+      const response = await fetch('https://api.mcsrvstat.us/2/cazemc.xyz');
       const data = await response.json();
       
       const playerCount = data.players?. online || 0;
